// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog when negative reinforcement appears renders negative reinforcement clue 1`] = `
<div>
  <div
    class="pf-c-modal-box kgt-dialog kgt-dialog--enabled"
    style="transform: translate(-50%, -50%);"
  >
    <button
      aria-disabled="false"
      aria-label="Close"
      class="pf-c-button pf-m-plain"
      data-kgt-close="true"
      data-ouia-component-id="OUIA-Generated-Button-plain-7"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 352 512"
        width="1em"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        />
      </svg>
    </button>
    <div
      class="pf-c-empty-state pf-m-sm"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <svg
          aria-hidden="true"
          class="pf-c-empty-state__icon"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
          />
        </svg>
        <h4
          class="pf-c-title pf-m-lg"
        >
          Great!
        </h4>
        <div
          class="pf-c-empty-state__body"
        >
          <p
            class="pf-c-content"
            data-pf-content="true"
          >
            Try to click there!
          </p>
        </div>
        <div
          class="pf-c-empty-state__secondary"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link"
            data-ouia-component-id="OUIA-Generated-Button-link-12"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Skip tour
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog when negative reinforcement appears renders negative reinforcement message 1`] = `
<div>
  <div
    class="pf-c-modal-box kgt-dialog kgt-dialog--enabled"
    style="transform: translate(-50%, -50%);"
  >
    <button
      aria-disabled="false"
      aria-label="Close"
      class="pf-c-button pf-m-plain"
      data-kgt-close="true"
      data-ouia-component-id="OUIA-Generated-Button-plain-6"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 352 512"
        width="1em"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        />
      </svg>
    </button>
    <div
      class="pf-c-empty-state pf-m-sm"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <svg
          aria-hidden="true"
          class="pf-c-empty-state__icon"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M448 360V24c0-13.3-10.7-24-24-24H96C43 0 0 43 0 96v320c0 53 43 96 96 96h328c13.3 0 24-10.7 24-24v-16c0-7.5-3.5-14.3-8.9-18.7-4.2-15.4-4.2-59.3 0-74.7 5.4-4.3 8.9-11.1 8.9-18.6zM128 134c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm0 64c0-3.3 2.7-6 6-6h212c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H134c-3.3 0-6-2.7-6-6v-20zm253.4 250H96c-17.7 0-32-14.3-32-32 0-17.6 14.4-32 32-32h285.4c-1.9 17.1-1.9 46.9 0 64z"
          />
        </svg>
        <h4
          class="pf-c-title pf-m-lg"
        >
          Do you want to stop the tour?
        </h4>
        <div
          class="pf-c-empty-state__body"
        >
          <p
            class="pf-c-content"
            data-pf-content="true"
          >
            Seems like you didn't follow the suggested action. Do you want to stop the tour?
          </p>
          <br />
          <p
            class="pf-c-content"
            data-pf-content="true"
          >
            <p
              style="display: inline;"
            >
              Click on 
              <b>
                Skip tour
              </b>
               to stop it or 
              <b>
                Continue
              </b>
               to resume your tour :-)
            </p>
          </p>
        </div>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-kgt-continue="true"
          data-ouia-component-id="OUIA-Generated-Button-primary-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Continue
        </button>
        <div
          class="pf-c-empty-state__secondary"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-link"
            data-ouia-component-id="OUIA-Generated-Button-link-11"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Skip tour
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog when the step cannot be loaded renders empty state 1`] = `
<div>
  <div
    class="pf-c-modal-box kgt-dialog kgt-dialog--enabled"
    style="transform: translate(-50%, -50%);"
  >
    <div
      class="pf-c-empty-state pf-m-sm"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <svg
          aria-hidden="true"
          class="pf-c-empty-state__icon"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
          />
        </svg>
        <h4
          class="pf-c-title pf-m-lg"
        >
          Oops!
        </h4>
        <div
          class="pf-c-empty-state__body"
        >
          Something went wrong and the content could not be loaded.
        </div>
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
        >
          Skip tour
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog when the step loads closes when users click on the close button 1`] = `
<div>
  <div
    class="pf-c-modal-box kgt-dialog kgt-dialog--disabled"
    style="transform: translate(-50%, -50%);"
  >
    <button
      aria-disabled="false"
      aria-label="Close"
      class="pf-c-button pf-m-plain"
      data-kgt-close="true"
      data-ouia-component-id="OUIA-Generated-Button-plain-5"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 352 512"
        width="1em"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        />
      </svg>
    </button>
    <div>
      Something
    </div>
    <div
      class="kgt-nav-controls"
    >
      <button
        aria-disabled="true"
        class="pf-c-button pf-m-link pf-m-disabled"
        data-kgt-prev="true"
        data-ouia-component-id="OUIA-Generated-Button-link-9"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        hidden=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          />
        </svg>
      </button>
      <div
        class="kgt-nav-controls__bullets"
      >
        <div
          class="kgt-nav-controls__bullet kgt-nav-controls__bullet--current"
        >
            
        </div>
      </div>
      <button
        aria-disabled="true"
        class="pf-c-button pf-m-link pf-m-disabled"
        data-kgt-next="true"
        data-ouia-component-id="OUIA-Generated-Button-link-10"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        hidden=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog when the step loads renders a step on auto mode 1`] = `
<div>
  <div
    class="pf-c-modal-box kgt-dialog kgt-dialog--enabled"
    style="transform: translate(-50%, -50%);"
  >
    <button
      aria-disabled="false"
      aria-label="Close"
      class="pf-c-button pf-m-plain"
      data-kgt-close="true"
      data-ouia-component-id="OUIA-Generated-Button-plain-4"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 352 512"
        width="1em"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        />
      </svg>
    </button>
    <div>
      <div>
        Something as string
      </div>
    </div>
    <div
      class="kgt-nav-controls"
    >
      <button
        aria-disabled="true"
        class="pf-c-button pf-m-link pf-m-disabled"
        data-kgt-prev="true"
        data-ouia-component-id="OUIA-Generated-Button-link-7"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        hidden=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          />
        </svg>
      </button>
      <div
        class="kgt-nav-controls__bullets"
      >
        <div
          class="kgt-nav-controls__bullet kgt-nav-controls__bullet--current"
        >
            
        </div>
      </div>
      <button
        aria-disabled="true"
        class="pf-c-button pf-m-link pf-m-disabled"
        data-kgt-next="true"
        data-ouia-component-id="OUIA-Generated-Button-link-8"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        hidden=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog when the step loads renders function-based content 1`] = `
<div>
  <div
    class="pf-c-modal-box kgt-dialog kgt-dialog--enabled"
    style="transform: translate(-50%, -50%);"
  >
    <button
      aria-disabled="false"
      aria-label="Close"
      class="pf-c-button pf-m-plain"
      data-kgt-close="true"
      data-ouia-component-id="OUIA-Generated-Button-plain-2"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 352 512"
        width="1em"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        />
      </svg>
    </button>
    <div>
      Something as JSX-function
    </div>
    <div
      class="kgt-nav-controls"
    >
      <button
        aria-disabled="true"
        class="pf-c-button pf-m-link pf-m-disabled"
        data-kgt-prev="true"
        data-ouia-component-id="OUIA-Generated-Button-link-3"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        hidden=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          />
        </svg>
      </button>
      <div
        class="kgt-nav-controls__bullets"
      >
        <div
          class="kgt-nav-controls__bullet kgt-nav-controls__bullet--current"
        >
            
        </div>
      </div>
      <button
        aria-disabled="true"
        class="pf-c-button pf-m-link pf-m-disabled"
        data-kgt-next="true"
        data-ouia-component-id="OUIA-Generated-Button-link-4"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        hidden=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog when the step loads renders react-based content 1`] = `
<div>
  <div
    class="pf-c-modal-box kgt-dialog kgt-dialog--enabled"
    style="transform: translate(-50%, -50%);"
  >
    <button
      aria-disabled="false"
      aria-label="Close"
      class="pf-c-button pf-m-plain"
      data-kgt-close="true"
      data-ouia-component-id="OUIA-Generated-Button-plain-1"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 352 512"
        width="1em"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        />
      </svg>
    </button>
    <div>
      Something as JSX
    </div>
    <div
      class="kgt-nav-controls"
    >
      <button
        aria-disabled="true"
        class="pf-c-button pf-m-link pf-m-disabled"
        data-kgt-prev="true"
        data-ouia-component-id="OUIA-Generated-Button-link-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        hidden=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          />
        </svg>
      </button>
      <div
        class="kgt-nav-controls__bullets"
      >
        <div
          class="kgt-nav-controls__bullet kgt-nav-controls__bullet--current"
        >
            
        </div>
      </div>
      <button
        aria-disabled="true"
        class="pf-c-button pf-m-link pf-m-disabled"
        data-kgt-next="true"
        data-ouia-component-id="OUIA-Generated-Button-link-2"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        hidden=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog when the step loads renders string-based content 1`] = `
<div>
  <div
    class="pf-c-modal-box kgt-dialog kgt-dialog--enabled"
    style="transform: translate(-50%, -50%);"
  >
    <button
      aria-disabled="false"
      aria-label="Close"
      class="pf-c-button pf-m-plain"
      data-kgt-close="true"
      data-ouia-component-id="OUIA-Generated-Button-plain-3"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 352 512"
        width="1em"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        />
      </svg>
    </button>
    <div>
      <div>
        Something as string
      </div>
    </div>
    <div
      class="kgt-nav-controls"
    >
      <button
        aria-disabled="true"
        class="pf-c-button pf-m-link pf-m-disabled"
        data-kgt-prev="true"
        data-ouia-component-id="OUIA-Generated-Button-link-5"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        hidden=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          />
        </svg>
      </button>
      <div
        class="kgt-nav-controls__bullets"
      >
        <div
          class="kgt-nav-controls__bullet kgt-nav-controls__bullet--current"
        >
            
        </div>
      </div>
      <button
        aria-disabled="true"
        class="pf-c-button pf-m-link pf-m-disabled"
        data-kgt-next="true"
        data-ouia-component-id="OUIA-Generated-Button-link-6"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe="true"
        disabled=""
        hidden=""
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
